added roulette game UI and basic logic

--- a/frontend-andreas/src/pages/casino/Casino.scss
+++ b/frontend-andreas/src/pages/casino/Casino.scss
@@ -1,8 +1,7 @@
-.game-card {
-  border-radius: 2rem;
-  border: 1px solid white;
-  width: 16rem;
-  height: 10rem;
-
-  padding: 2rem;
-}
+// .game-card {
+//   border-radius: 2rem;
+//   border: 1px solid white;
+//   // width: 16rem;
+//   // height: 10rem;
+//   padding: 1rem;
+// }
